Inserindo Table e Pre

--- a/Estudos_3/Atv_1/index.html
+++ b/Estudos_3/Atv_1/index.html
@@ -23,5 +23,30 @@
 
     <img src="https://i.pinimg.com/736x/d7/18/68/d7186887be3f67ead2ca9e74c47864fd.jpg" alt="" width="500px">
 
+    <table>
+        <p>Tabela</p>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Teste 1</td>
+            <td>Teste 2</td>
+            <td>Teste 3</td>
+        </tr>
+        <tr>
+            <td>Form 1</td>
+            <td>Form 2</td>
+            <td>Form 3</td>
+        </tr>
+    </table>
+
+<pre>Testando TAG "pre" função de espaço automática e com quebra de linha.
+E
+S
+T
+E
+</pre>
 </body>
 </html>
