Lista Ordenada e Não Ordenada

--- a/Estudos_3/Atv_1/index.html
+++ b/Estudos_3/Atv_1/index.html
@@ -48,5 +48,34 @@ S
 T
 E
 </pre>
+
+<h2>Classificação das cores</h2>
+<ul>
+<li><h3>Cores Primárias</h3></li>
+<ol>
+<li>Vermelho</li>
+<li>Azul</li>
+<li>Amarelo</li>
+</ol>
+</ul>
+
+<ul>
+<li><h3>Cores Secundárias</h3></li>
+<ol>
+<li>Vermelho</li>
+<li>Azul</li>
+<li>Amarelo</li>
+</ol>
+</ul>
+
+<ul>
+<li><h3>Cores Terciárias</h3></li>
+<ol>
+<li>Vermelho</li>
+<li>Azul</li>
+<li>Amarelo</li>
+</ol>
+</ul>
+
 </body>
 </html>
