--- a/Estudos_3/Atv_1/index.html
+++ b/Estudos_3/Atv_1/index.html
@@ -23,7 +23,7 @@
 
     <img src="https://i.pinimg.com/736x/d7/18/68/d7186887be3f67ead2ca9e74c47864fd.jpg" alt="" width="500px">
 
-    <table>
+    <table border="1">
         <p>Tabela</p>
         <tr>
             <td>1</td>
@@ -76,6 +76,59 @@ E
 <li>Amarelo</li>
 </ol>
 </ul>
+
+
+
+<table border="1">
+    <thead>
+       <tr>
+          <th rowspan="3">Dia</th>
+          <th colspan="4">Seminário: desenvolvimento de sistemas com PHP</th>
+       </tr>
+       <tr>
+          <th colspan="2">Agendamento</th>
+          <th rowspan="2">Tema</th>
+       </tr>
+       <tr>
+          <th>Início</th>
+          <th>Fim</th>
+       </tr>
+    </thead>
+ 
+    <tbody>
+       <tr>
+          <td rowspan="2">Segunda-feira</td>
+          <td rowspan="2">9:00</td>
+          <td rowspan="2">10:30</td>
+          <td>Criação de páginas com HTML5</td>
+       </tr>
+       <tr>
+          <td>Criação de páginas com CSS3</td>
+       </tr>
+       <tr>
+          <td>Segunda-feira</td>
+          <td>11:00</td>
+          <td>11:50</td>
+          <td>Criação e validação de formulários com HTML5</td>
+       </tr>
+       <tr>
+          <td>Terça-feira</td>
+          <td>09:00</td>
+          <td>09:50</td>
+          <td>Introdução à linguagem PHP</td>
+       </tr>
+       <tr>
+          <td rowspan="2">Terça-feira</td>
+          <td rowspan="2">10:00</td>
+          <td rowspan="2">11:50</td>
+          <td>Estruturas de controle na linguagem PHP</td>
+       </tr>
+       <tr>
+          <td>Outros comandos em PHP</td>
+       </tr>
+    </tbody>
+ </table>
+
 
 </body>
 </html>
