Aprendendo sobre DOM

--- a/Estudos_3/Atv_1/index.html
+++ b/Estudos_3/Atv_1/index.html
@@ -128,7 +128,23 @@ E
        </tr>
     </tbody>
  </table>
+ <br>
 
+ <table border="2">
+   <tr>
+      <th>Olá</th>
+      <th>Testando</th>
+      <td>Ok</td>
+      <td>Ok</td>
+   </tr>
+   <tr>
+      <td>Sengunda</td>
+      <td>terça</td>
+      <td>Quarta</td>
+   </tr>
+   
+
+ </table>
 
 </body>
 </html>
