--- a/Estudos_3/Atv_3/index.html
+++ b/Estudos_3/Atv_3/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head></head>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Teste DOM</title>
+</head>
 <body>
  <h1 id="id1">Meu Cabeçalho 1</h1>
  <button type="button" onclick="document.getElementById('id1').
