--- a/Estudos_3/Atv_2/index.html
+++ b/Estudos_3/Atv_2/index.html
@@ -4,25 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Formulário</title>
 </head>
 <body>
-    <form method="post" name="form1" action="envia">
+    <form method="dialog" name="form1" action="envia">
         <fieldset>
             <legend>Dados Pessoais</legend>
-            <label>Nome</label>
-            <input type="text" name="Nome" size="30" required="required"><br>
-            <label>Endereço</label>
-            <input type="text" name="Endereço" size="25" required="required"><br>
-            <label>Cidade</label>
-            <input type="text" name="Cidade" size="25" required="required"><br>
-            <label>Estado</label>
-            <select name="Estado">
+            <label for="a">Nome</label>
+            <input type="text" id="a" name="Nome" size="30" required="required"><br>
+            <label for="b">Data de Nascimento</label>
+            <input type="date" id="b"><br>
+            <label for="c">E-mail</label>
+            <input type="email" id="c"><br>
+            <label for="d">Endereço</label>
+            <input type="text" id="d" name="Endereço" size="29" required="required"><br>
+            <label for="e">Bairro</label>
+            <input type="text" id="e" name="Bairro" size="29%"><br>
+            <label for="f">Cidade</label>
+            <input type="text" id="f" name="Cidade" size="28" required="required"><br>
+            <label for="g">Estado</label>
+            <select name="Estado" id="g">
                 <option value="SP">São Paulo</option>
                 <option value="RJ">Rio de Janeiro</option>
                 <option value="ES">Espirito Santo</option>
+                <option value="CE">Ceará</option>
+                <option value="BA">Bahia</option>
+                <option value="AC">Acre</option>
+                <option value="AM">Amazonas</option>
             </select>
-            <input type="submit" name="envia" value="Enviar">
+            <input type="submit" name="envia" value="Enviar" onclick="abrirAlerta()">
             <input type="reset" name="limpa" value="Limpar">
         </fieldset>
     </form>
