Atualização do formulário

--- a/Estudos_3/Atv_2/index.html
+++ b/Estudos_3/Atv_2/index.html
@@ -15,17 +15,18 @@
             <label for="a">Nome</label>
             <input type="text" id="a" name="Nome" size="30" required="required"><br>
             <label for="b">Data de Nascimento</label>
-            <input type="date" id="b"><br>
+            <input type="date" id="b" name="date" required="required"><br>
             <label for="c">E-mail</label>
-            <input type="email" id="c"><br>
+            <input type="email" id="c" name="email" required="required"><br>
             <label for="d">Endereço</label>
             <input type="text" id="d" name="Endereço" size="29" required="required"><br>
             <label for="e">Bairro</label>
-            <input type="text" id="e" name="Bairro" size="29%"><br>
+            <input type="text" id="e" name="Bairro" size="29%" required="required"><br>
             <label for="f">Cidade</label>
             <input type="text" id="f" name="Cidade" size="28" required="required"><br>
             <label for="g">Estado</label>
-            <select name="Estado" id="g">
+            <select name="Estado" id="g" required="required">
+                <option></option>
                 <option value="SP">São Paulo</option>
                 <option value="RJ">Rio de Janeiro</option>
                 <option value="ES">Espirito Santo</option>
